[gd_scene load_steps=6 format=2]

[ext_resource path="res://character/player/PlayerScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://character/enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/HUD/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 64, 64, 0, 0, 0, 0, 952, 64, 0, 0, 0, 0, 960, 512, 0, 0, 0, 0, 64, 512, 0, 0, 0, 0, 64, 64 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 3 )

[node name="PlayerScene" parent="." instance=ExtResource( 1 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 64, 64 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="PlayerScene" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
